Micrometer: Message History factory and JMX MicrometerMessageHistory is not covered (#5210)
Fixes #5050

Co-authored-by: JiriOndrusek <ondrusek.jiri@gmail.com>